[package]
name = "bfk"
version = "0.1.2"
edition = "2018"
authors = ["Yusaku Hashimoto <nonowarn@gmail.com>"]
license = "MIT"
description = "Brainfuck interpreter"
homepage = "https://github.com/nonowarn/bfk"
repository = "https://github.com/nonowarn/bfk"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
clap = "2.33.3"
