[package]
name = "bfk"
version = "0.2.1"
edition = "2018"
authors = ["Yusaku Hashimoto <nonowarn@gmail.com>"]
license = "MIT"
description = "Brainfuck interpreter"
homepage = "https://github.com/nonowarn/bfk"
repository = "https://github.com/nonowarn/bfk"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
clap = "3.2.22"
exitcode = "1.1.2"
